[package]
name = "eurydice"
version = "0.1.0"
authors = ["William Rudenmalm <me@whn.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.1.22"
futures = "0.1.29"
tokio-postgres = "0.4.0-rc.3"
bytes = "0.4.12"
