[package]
name = "logsqrld"
version = "0.1.0"
authors = ["william.rudenmalmhogman <me@whn.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.9.0"
tantivy = "0.13.2"
tempfile = "3.1.0"
tokio = { version = "0.2.17", features = ["full", "time"]}
futures = "0.3.8"
