[package]
name = "repo-server"
version = "0.1.0"
authors = ["william.rudenmalmhogman <me@whn.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
octocrab = "0.8"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "2.1.0"
toml = "0.5"
snafu = "0.6.10"
serde_json = "1.0"
tokio = { version = "1.4.0", features = ["full"] }
walkdir = "2"
dirs = "3.0"
flexbuffers = "0.2.2"
