[package]
name = "wlibs-generator"
version = "0.1.0"
authors = ["william.rudenmalmhogman <me@whn.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.8"
tokio = { version = "1.2", features = ["full"] }
futures = "0.3.12"
tokio-stream = { version = "0.1.3", features = ["fs"] }
